<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="#FFFFFF"
    tools:context=".activities.AddOrRemoveTeacherActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/teacher_image"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/name_teacher_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/name_icon"
            android:hint="@string/teacher_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/id_teacher_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/user_id_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/teacher_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/password_teacher_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/password_icon"
            android:ems="10"
            android:hint="@string/teacher_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp" />

        <EditText
            android:id="@+id/subject_teacher_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:drawableStart="@drawable/subject_icon"
            android:drawablePadding="10dp"
            android:hint="@string/teacher_subject"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <Button
            android:id="@+id/add_teacher_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_bg"
            android:padding="10dp"
            android:text="@string/add_teacher"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/remove_teacher_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_bg"
            android:padding="10dp"
            android:text="@string/remove_teacher"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
