<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="#FFFFFF"
    tools:context=".activities.AddOrRemoveStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/student_image" />

        <EditText
            android:id="@+id/name_student_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/name_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/student_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/id_student_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/user_id_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/student_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/password_student_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/student_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp" />

        <Spinner
            android:id="@+id/select_class_student_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/classes_for_teacher_and_students"
            android:gravity="center"
            android:padding="15dp"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/add_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_bg"
            android:padding="10dp"
            android:text="@string/add_student"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/remove_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_bg"
            android:padding="10dp"
            android:text="@string/remove_student"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
